add ambulance get/update and predefined conditions management
